syntax = "proto3";

import "google/protobuf/empty.proto";
import "common_types.proto";
import "goods_types.proto";

option java_multiple_files = true;
option java_package = "com.example.goods";
option java_outer_classname = "GoodsProto";

service GoodsService {
    rpc GetGoodsList (google.protobuf.Empty) returns (GoodList) {}
    rpc GetGood (Id) returns (Good) {}
    rpc FindGoods (Name) returns (GoodList) {}
    rpc AddGoods (GoodAddInfoList) returns (StringResponse) {}
    rpc AlterGoods (GoodAlterInfoList) returns (StringResponse) {}
}
