syntax = "proto3";

import "common_types.proto";
import "orders_types.proto";

option java_multiple_files = true;
option java_package = "com.example.orders";
option java_outer_classname = "OrdersProto";

service OrdersService {
  rpc GetCartGoods (Id) returns (stream CartGood) {}
  rpc AddCartGood (ManageGoodInfo) returns (StringResponse) {}
  rpc AddCartGoods (stream ManageGoodInfo) returns (StringResponse) {}
  rpc DeleteCartGood (ManageGoodInfo) returns (StringResponse) {}
  rpc DeleteCartGoods (stream ManageGoodInfo) returns (StringResponse) {}
  rpc AlterCartGoodAmount (GoodAmountInfo) returns (StringResponse) {}
  rpc AlterCartGoodsAmount (stream GoodAmountInfo) returns (StringResponse) {}
  rpc GetUserOrders (Id) returns (stream Order) {}
  rpc SetOrderStatus (OrderStatus) returns (StringResponse) {}
  rpc CreateOrder (CreateOrderInfo) returns (StringResponse) {}
}


